--- a/src/app/user-auth/user-auth.component.html
+++ b/src/app/user-auth/user-auth.component.html
@@ -1,27 +1,75 @@
 <div class="user-auth">
-  <h1>User SignUp</h1>
-  <form #userSignUp="ngForm" class="common-form" (ngSubmit)="signUp(userSignUp.value)">
-    <input
-      class="form-input"
-      type="text"
-      name="name"
-      placeholder="Enter User Name"
-      ngModel
-    />
-    <input
-      class="form-input"
-      type="text"
-      name="email"
-      placeholder="Enter User Email"
-      ngModel
-    />
-    <input
-      class="form-input"
-      type="password"
-      name="password"
-      placeholder="Enter User Password"
-      ngModel
-    />
-    <button class="form-button">Sign Up</button>
-  </form>
+  <div class="sign-up" *ngIf="showLogin">
+    <h1>User SignUp</h1>
+    <form #userSignUp="ngForm" class="common-form" (ngSubmit)="signUp(userSignUp.value)">
+      <input
+        class="form-input"
+        type="text"
+        name="name"
+        placeholder="Enter User Name"
+        ngModel
+      />
+      <input
+        class="form-input"
+        type="text"
+        name="email"
+        placeholder="Enter User Email"
+        ngModel
+      />
+      <input
+        class="form-input"
+        type="password"
+        name="password"
+        placeholder="Enter User Password"
+        ngModel
+      />
+      <button class="form-button">Sign Up</button>
+      <p>
+        Already have an account? 
+        <a (click)="openLogin()" class="sign">Login</a>
+      </p>
+    </form>
+    
+  </div>
+  <div class="login" *ngIf="!showLogin">
+    <h1>User Login</h1>
+    <form #userLogIn="ngForm" class="common-form" (ngSubmit)="logIn(userLogIn.value)">
+     <p class="error-p">{{authError}}</p>
+      <input
+        class="form-input"
+        type="text"
+        name="email"
+        placeholder="Enter User Email"
+        ngModel
+        #email="ngModel"
+        required
+        email
+      />
+      <p class="invalid-input">
+        <span *ngIf="email.invalid && email.touched">
+          Please enter a valid email address
+        </span>
+      </p>
+      <input
+        class="form-input"
+        type="password"
+        name="password"
+        placeholder="Enter User Password"
+        ngModel
+        #password="ngModel"
+        required
+        minlength="3"
+        maxlength="20"
+      />
+      <p class="invalid-input">
+        <span *ngIf="password.invalid && password.touched">
+          Please enter a valid password address
+        </span>
+      </p>
+      <button [disabled]="userLogIn.invalid" class="form-button">LogIn</button>
+      <p>Back to Register? <a (click)="openReg()" class="sign">Register</a></p>
+   
+    </form>
+    
+  </div>
 </div>
