--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,14 +17,14 @@
         <li><a routerLink="seller-auth">Seller</a></li>
         <li><a href="">Home</a></li>
         <li><a routerLink="user-auth">Login/Sign-Up</a></li>
-        <li><a href="#">Cart(0)</a></li>
+        <li><a href="#">Cart({{cartItems}})</a></li>
     </ul>
     <ul *ngSwitchCase="'user'">
       <li><a routerLink="seller-auth">Seller</a></li>
       <li><a href="">Home</a></li>
       <li><a >{{userName| titlecase}}</a></li>
       <li><a (click)="userLogOut()">LogOut</a></li>
-      <li><a href="#">Cart(0)</a></li>
+      <li><a href="#">Cart({{cartItems}})</a></li>
   </ul>
     <ul *ngSwitchCase="'seller'">
       <li><a routerLink="seller-add-product">Add Product</a></li>
